<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageFlags"
        android:layout_width="70dp"
        android:layout_height="85dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/txtZeme"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:text="@string/zeme"

            />

        <TextView
            android:id="@+id/txtKod"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:gravity="center_vertical"
            android:text="@string/kod" />

        <TextView
            android:id="@+id/txtKurz"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:text="@string/kurz" />

    </LinearLayout>


</LinearLayout>