<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.netactivity.Changer">

    <ImageView
        android:id="@+id/imageCzFlags"
        android:layout_width="70dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/flag_cz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/txtCr"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"

        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/ceska_republika"
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/imageFlags"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCrKod"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/kod_cr"
        android:textAlignment="center"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCr"
        app:layout_constraintLeft_toRightOf="@+id/imageFlags"
        android:layout_marginLeft="51dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/txtCrKurz"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:text="@string/cr_kurz"
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/imageFlags"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCrKod" />

    <EditText
        android:id="@+id/setCountCz"
        android:layout_width="353dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCrKurz"
        app:layout_constraintVertical_bias="0.025" />

    <ImageView
        android:id="@+id/imageFlags"
        android:layout_width="70dp"
        android:layout_height="85dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintVertical_bias="0.946" />

    <TextView
        android:id="@+id/txtZeme"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="387dp"
        android:text="@string/zeme"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintLeft_toRightOf="@+id/imageFlags"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/txtKod"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/kod"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintLeft_toRightOf="@+id/imageFlags"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtZeme"
        app:layout_constraintVertical_bias="0.153" />

    <TextView
        android:id="@+id/txtKurz"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/kurz"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintLeft_toRightOf="@+id/imageFlags"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtKod"
        app:layout_constraintVertical_bias="0.266" />

    <EditText
        android:id="@+id/setCountAny"
        android:layout_width="353dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/txtZeme"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</android.support.constraint.ConstraintLayout>
